Add favorite movie/game to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <h1>Hello, World!</h1>
     <div>My name is Joseph</div>
     <div>My favorite hobby is gaming</div>
-	<div>THIS LINE IS A TEST</div>
-
+	<div>PIZZA IS MY FAVORITE FOOD</div>
 </body>
 </html>
