--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello, World!</h1>
     <div>My name is Joseph</div>
     <div>My favorite hobby is gaming</div>
+    <div>My favorite movie is spiderman</div>	
 </body>
 </html>
